@@ -1,5 +1,13 @@
 2006-01-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/Utils.h,
+	  src/Utils.cc,
+	  src/jfs.cc,
+	  src/xfs.cc: fixed small issue with mounting. (discovered on the
+	  livecd)
+
+2006-01-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core.cc: improved scanning for root mountpoint (/)
 	* src/Dialog_Partition_Info.cc: use Utils::format_size() instead of
 	  displaying every value in MiB's. Also some cleanups and changes.
